@@ -8,7 +8,7 @@ URI::Fast - A fast(er) URI parser
 
 =head1 VERSION
 
-version 0.18
+version 0.19
 
 =head1 SYNOPSIS
 
